Fixed issue with menu overflow

--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -1619,7 +1619,7 @@ menu,
   border: 1px solid #29292b; }
   .csd menu, .csd
   .menu {
-    padding: 4px 0px;
+    padding: 0 0px;
     border-radius: 2px;
     border: none; }
   menu separator,
