--- a/gtk-3.0/sass/_common.scss
+++ b/gtk-3.0/sass/_common.scss
@@ -1624,7 +1624,7 @@ menu,
   border: 1px solid $borders_color;
 
   .csd & {
-    padding: 4px 0px;
+    padding: 0 0px;
     border-radius: 2px;
     border: none;
   }
